@@ -59,6 +59,7 @@ Application Fixes:
 - Vehicle and/or drone mods with a minimum rating greater than 1 now properly take their minimum into consideration for availability and cost filters in the vehicle/drone mod selection screen.
 - The option to allow for skill points to be used to break skill groups no longer disables spending skill points on all skill groups under certain circumstances.
 - Trying to buy gear plugin in career mode for an armor, armor mod, or gear attached in some way to an armor or armor mod without enough money now no longer leaves a "ghost" gear after the message saying that the character cannot afford the gear has been shown.
+- Vehicle mods can now properly be sold in career mode.
 
 Data Changes:
 - Removed legacy nodes for Street Scum Priority values that caused incorrect nuyen amounts.
@@ -133,6 +134,7 @@ Changed/New Strings:
 - String_CapacityRemaining
 - String_Concealability
 - String_UpgradedRating
+- Message_DeleteVehicleMod
 
 Build 212
 Application Changes:
